updated my work

--- a/Week_Challenge_1.ipynb
+++ b/Week_Challenge_1.ipynb
@@ -41,7 +41,7 @@
         "#Better\n",
         "!pip install requests BeautifulSoup4 fire"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
         "\n",
         "import fire"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
         "if get_ipython().__class__.__name__ == '__main__':\n",
         "    fire(get_tag_elements)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "res = get_elements('https://africafreak.com/100-most-influential-twitter-users-in-africa',tag='h2')\n",
         "res"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +403,7 @@
         "    user_twitter_handle.remove(i)\n",
         "user_twitter_handle"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,7 +543,7 @@
         "sorted_NonGov_Handles = df_handles_nongovInfluencers.sort_values('Handles of Non-Government Officials',ascending=False)\n",
         "sorted_NonGov_Handles.to_csv(r'handles_NonGovs.csv', index=False)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -567,10 +567,10 @@
         "import tweepy\n",
         "import csv\n",
         "\n",
-        "consumer_key = \"YNkViscToXknwxdHZlMet5ttL\"\n",
-        "consumer_secret = \"CLYR7a7heJmDxdYL8ndSWy8iBjrzT7o6uosWCOw5PegqRpXLCo\"\n",
-        "access_token = \"1246485711282462722-K6XVehSuGcLOhykJAh5o08t9Gjj91f\"\n",
-        "access_token_secret = \"2ylVw2VqkhwmwhBnPWaZEl891FBzefDPokKcBpP6fj7uT\"\n",
+        "consumer_key = \"\"\n",
+        "consumer_secret = \"\"\n",
+        "access_token = \"\"\n",
+        "access_token_secret = \"\"\n",
         "\n",
         "# Creating the authentication object\n",
         "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
@@ -579,7 +579,7 @@
         "# Creating the API object while passing in auth information\n",
         "api = tweepy.API(auth) "
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -611,7 +611,7 @@
         "df_tweets_nongovInfluencers = DataFrame(Tweets_NonGov_Influentials, columns=['Tweets of Non-Government Influentials'])\n",
         "df_tweets_nongovInfluencers.to_csv(r'tweets_NonGovs.csv', index=False)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -961,7 +961,7 @@
         "concatenated_list = pd.concat([df_scrrenname_nongovInfluencers, df_popularityscores_NonGov_Influencers,df_reachscores_NonGov_Influencers], axis=1)\n",
         "concatenated_list.sort_values(by=['Reach Scores for Social Media Influentials'], ascending=False).head(10)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1103,7 +1103,7 @@
         "concatenated_list2 = pd.concat([df_scrrenname_nongovInfluencers, df_popularityscores_NonGov_Influencers,df_reachscores_NonGov_Influencers], axis=1)\n",
         "concatenated_list2.sort_values(by=['Popularity Scores for Social Media Influentials'], ascending=False).head(10)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1253,7 +1253,7 @@
         "    gov_officials_twitter_handles.append(handle)\n",
         "    print(f'{name} : {handle}')"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1322,7 +1322,7 @@
         "sorted_Gov_Handles = df_handles_govInfluencers.sort_values('Handles of Government Officials',ascending=False)\n",
         "sorted_Gov_Handles.to_csv(r'handles_Govs.csv', index=False)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1336,10 +1336,10 @@
         "import tweepy\n",
         "import csv\n",
         "\n",
-        "consumer_key = \"YNkViscToXknwxdHZlMet5ttL\"\n",
-        "consumer_secret = \"CLYR7a7heJmDxdYL8ndSWy8iBjrzT7o6uosWCOw5PegqRpXLCo\"\n",
-        "access_token = \"1246485711282462722-K6XVehSuGcLOhykJAh5o08t9Gjj91f\"\n",
-        "access_token_secret = \"2ylVw2VqkhwmwhBnPWaZEl891FBzefDPokKcBpP6fj7uT\"\n",
+        "consumer_key = \"\"\n",
+        "consumer_secret = \"\"\n",
+        "access_token = \"\"\n",
+        "access_token_secret = \"\"\n",
         "\n",
         "# Creating the authentication object\n",
         "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
@@ -1348,7 +1348,7 @@
         "# Creating the API object while passing in auth information\n",
         "api = tweepy.API(auth) "
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1887,7 +1887,7 @@
         "concatenated_list_gov = pd.concat([df_screenname_govInfluencers, df_popularityscores_Gov_Influencers,df_reachscores_Gov_Influencers], axis=1)\n",
         "concatenated_list_gov.sort_values(by=['Reach Scores for Government Influencers'], ascending=False).head(10)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2029,7 +2029,7 @@
         "concatenated_list_gov2 = pd.concat([df_screenname_govInfluencers, df_popularityscores_Gov_Influencers,df_reachscores_Gov_Influencers], axis=1)\n",
         "concatenated_list_gov2.sort_values(by=['Popularity Scores for Government Influencers'], ascending=False).head(10)"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2153,7 +2153,7 @@
         "id": "xNQv8W3iH0qA"
       },
       "source": [
-        "##### Extract the top 5 unique hashtags these influencers and government officials used in their top 10 retweets. Group them based on their top 5 hashtags similarities. "
+        "#### I extracted the top 5 unique hashtags these influencers and government officials used in their tweets. "
       ]
     },
     {
@@ -2196,7 +2196,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### convert all hashtags generated above to lowercase"
+        "####  I converted all the hashtags generated above to lowercase"
       ]
     },
     {
@@ -2224,7 +2224,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### change \"coronavirus\" and \"covidlockdown\" to mean \"covid19\" since the three words mean the same thing"
+        "#### I changed \"coronavirus\" and \"covidlockdown\" to mean \"covid19\" since the three words mean the same thing"
       ]
     },
     {
@@ -2312,7 +2312,7 @@
         "plt.title(\"A Bar Plot to show the fraction of influencers and top government officials by hashtag\")\n",
         "plt.show()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
